# personal-knowledge-system

./: .gitignore
embedding-service/: server.py
services/api/: Dockerfile  build.gradle.kts  gradle.properties  notes.db  settings.gradle.kts
services/api/src/main/kotlin/org/example/: App.kt
services/api/src/main/kotlin/org/example/domain/: Note.kt
services/api/src/main/kotlin/org/example/graphql/: Mutation.Kt  Query.kt
services/api/src/main/kotlin/org/example/infrastructure/db/: DatabaseFactory.kt  NotesTable.kt
services/api/src/main/kotlin/org/example/repository/: NoteRepository.kt
services/api/src/main/kotlin/org/example/search/: HybridRanker.kt  Scorer.kt  SearchResult.kt  SnippetExtractor.kt  Tokenizer.kt
services/api/src/main/kotlin/org/example/vector/: EmbeddingClient.kt  VectorClient.kt
vector-engine/: CMakeLists.txt  Dockerfile
vector-engine/src/: main.cpp  vector_store.cpp  vector_store.h
